apps/sidero/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: sidero
    cluster.x-k8s.io/provider: infrastructure-sidero
    cluster.x-k8s.io/v1alpha3: v1alpha3
    cluster.x-k8s.io/v1alpha4: v1alpha3
    cluster.x-k8s.io/v1beta1: v1alpha3
    clusterctl.cluster.x-k8s.io: ""
    pod-security.kubernetes.io/enforce: privileged
  name: sidero-system
