apps/sidero/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: sidero
    cluster.x-k8s.io/provider: infrastructure-sidero
    cluster.x-k8s.io/v1alpha3: v1alpha3
    cluster.x-k8s.io/v1alpha4: v1alpha3
    cluster.x-k8s.io/v1beta1: v1alpha3
    clusterctl.cluster.x-k8s.io: ""
    control-plane: caps-controller-manager
  name: caps-controller-manager
  namespace: sidero-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sidero
      cluster.x-k8s.io/provider: sidero
      cluster.x-k8s.io/v1alpha3: v1alpha3
      cluster.x-k8s.io/v1alpha4: v1alpha3
      cluster.x-k8s.io/v1beta1: v1alpha3
      control-plane: caps-controller-manager
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sidero
        cluster.x-k8s.io/provider: sidero
        cluster.x-k8s.io/v1alpha3: v1alpha3
        cluster.x-k8s.io/v1alpha4: v1alpha3
        cluster.x-k8s.io/v1beta1: v1alpha3
        control-plane: caps-controller-manager
    spec:
      containers:
      - args:
        - --metrics-bind-addr=127.0.0.1:8080
        command:
        - /manager
        image: ghcr.io/siderolabs/caps-controller-manager:v0.6.1
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: healthz
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        - containerPort: 9440
          name: healthz
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: healthz
        resources:
          limits:
            cpu: "1"
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      - args:
        - --secure-listen-address=0.0.0.0:8443
        - --upstream=http://127.0.0.1:8080/
        - --logtostderr=true
        - --v=10
        image: gcr.io/kubebuilder/kube-rbac-proxy:v0.14.1
        name: kube-rbac-proxy
        ports:
        - containerPort: 8443
          name: https
        resources: {}
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: caps-webhook-service-cert
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: sidero
    cluster.x-k8s.io/provider: infrastructure-sidero
    cluster.x-k8s.io/v1alpha3: v1alpha3
    cluster.x-k8s.io/v1alpha4: v1alpha3
    cluster.x-k8s.io/v1beta1: v1alpha3
    clusterctl.cluster.x-k8s.io: ""
    control-plane: sidero-controller-manager
  name: sidero-controller-manager
  namespace: sidero-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sidero
      cluster.x-k8s.io/provider: sidero
      cluster.x-k8s.io/v1alpha3: v1alpha3
      cluster.x-k8s.io/v1alpha4: v1alpha3
      cluster.x-k8s.io/v1beta1: v1alpha3
      control-plane: sidero-controller-manager
  strategy:
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sidero
        cluster.x-k8s.io/provider: sidero
        cluster.x-k8s.io/v1alpha3: v1alpha3
        cluster.x-k8s.io/v1alpha4: v1alpha3
        cluster.x-k8s.io/v1beta1: v1alpha3
        control-plane: sidero-controller-manager
    spec:
      containers:
      - args:
        - --metrics-bind-addr=127.0.0.1:8080
        - --api-endpoint=-
        - --api-port=8081
        - --http-port=8081
        - --extra-agent-kernel-args=-
        - --boot-from-disk-method=ipxe-exit
        - --auto-accept-servers=false
        - --insecure-wipe=true
        - --auto-bmc-setup=true
        - --server-reboot-timeout=20m
        - --ipmi-pxe-method=uefi
        - --disable-dhcp-proxy=false
        - --test-power-simulated-explicit-failure-prob=0
        - --test-power-simulated-silent-failure-prob=0
        command:
        - /manager
        image: ghcr.io/siderolabs/sidero-controller-manager:v0.6.1
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: healthz
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        - containerPort: 67
          name: dhcp
          protocol: UDP
        - containerPort: 69
          name: tftp
          protocol: UDP
        - containerPort: 8081
          name: http
          protocol: TCP
        - containerPort: 9440
          name: healthz
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: healthz
        resources:
          limits:
            cpu: "1"
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      - args:
        - --secure-listen-address=0.0.0.0:8443
        - --upstream=http://127.0.0.1:8080/
        - --logtostderr=true
        - --v=10
        image: gcr.io/kubebuilder/kube-rbac-proxy:v0.14.1
        name: kube-rbac-proxy
        ports:
        - containerPort: 8443
          name: https
        resources: {}
      - args:
        - --wireguard-endpoint=-
        - --wireguard-port=51821
        command:
        - /siderolink-manager
        image: ghcr.io/siderolabs/sidero-controller-manager:v0.6.1
        imagePullPolicy: Always
        name: siderolink
        ports:
        - containerPort: 51821
          name: siderolink
          protocol: UDP
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 128Mi
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
          privileged: false
        volumeMounts:
        - mountPath: /dev/net/tun
          name: dev-tun
      - command:
        - /log-receiver
        image: ghcr.io/siderolabs/sidero-controller-manager:v0.6.1
        imagePullPolicy: Always
        name: serverlogs
        resources:
          limits:
            cpu: 256m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 128Mi
      - command:
        - /events-manager
        image: ghcr.io/siderolabs/sidero-controller-manager:v0.6.1
        imagePullPolicy: Always
        name: serverevents
        resources:
          limits:
            cpu: 256m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 128Mi
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: sidero-webhook-service-cert
      - hostPath:
          path: /dev/net/tun
          type: CharDevice
        name: dev-tun
status: {}
