apps/sidero/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sidero
    cluster.x-k8s.io/provider: infrastructure-sidero
    cluster.x-k8s.io/v1alpha3: v1alpha3
    cluster.x-k8s.io/v1alpha4: v1alpha3
    cluster.x-k8s.io/v1beta1: v1alpha3
    clusterctl.cluster.x-k8s.io: ""
    control-plane: caps-controller-manager
  name: caps-controller-manager-metrics-service
  namespace: sidero-system
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    app: sidero
    cluster.x-k8s.io/provider: sidero
    cluster.x-k8s.io/v1alpha3: v1alpha3
    cluster.x-k8s.io/v1alpha4: v1alpha3
    cluster.x-k8s.io/v1beta1: v1alpha3
    control-plane: caps-controller-manager
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sidero
    cluster.x-k8s.io/provider: infrastructure-sidero
    cluster.x-k8s.io/v1alpha3: v1alpha3
    cluster.x-k8s.io/v1alpha4: v1alpha3
    cluster.x-k8s.io/v1beta1: v1alpha3
    clusterctl.cluster.x-k8s.io: ""
  name: caps-webhook-service
  namespace: sidero-system
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    app: sidero
    cluster.x-k8s.io/provider: sidero
    cluster.x-k8s.io/v1alpha3: v1alpha3
    cluster.x-k8s.io/v1alpha4: v1alpha3
    cluster.x-k8s.io/v1beta1: v1alpha3
    control-plane: caps-controller-manager
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sidero
    cluster.x-k8s.io/provider: infrastructure-sidero
    cluster.x-k8s.io/v1alpha3: v1alpha3
    cluster.x-k8s.io/v1alpha4: v1alpha3
    cluster.x-k8s.io/v1beta1: v1alpha3
    clusterctl.cluster.x-k8s.io: ""
    control-plane: sidero-controller-manager
  name: sidero-controller-manager-metrics-service
  namespace: sidero-system
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    app: sidero
    cluster.x-k8s.io/provider: sidero
    cluster.x-k8s.io/v1alpha3: v1alpha3
    cluster.x-k8s.io/v1alpha4: v1alpha3
    cluster.x-k8s.io/v1beta1: v1alpha3
    control-plane: sidero-controller-manager
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sidero
    cluster.x-k8s.io/provider: infrastructure-sidero
    cluster.x-k8s.io/v1alpha3: v1alpha3
    cluster.x-k8s.io/v1alpha4: v1alpha3
    cluster.x-k8s.io/v1beta1: v1alpha3
    clusterctl.cluster.x-k8s.io: ""
  name: sidero-dhcp
  namespace: sidero-system
spec:
  ports:
  - port: 67
    protocol: UDP
    targetPort: dhcp
  selector:
    app: sidero
    cluster.x-k8s.io/provider: sidero
    cluster.x-k8s.io/v1alpha3: v1alpha3
    cluster.x-k8s.io/v1alpha4: v1alpha3
    cluster.x-k8s.io/v1beta1: v1alpha3
    control-plane: sidero-controller-manager
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sidero
    cluster.x-k8s.io/provider: infrastructure-sidero
    cluster.x-k8s.io/v1alpha3: v1alpha3
    cluster.x-k8s.io/v1alpha4: v1alpha3
    cluster.x-k8s.io/v1beta1: v1alpha3
    clusterctl.cluster.x-k8s.io: ""
  name: sidero-http
  namespace: sidero-system
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: http
  selector:
    app: sidero
    cluster.x-k8s.io/provider: sidero
    cluster.x-k8s.io/v1alpha3: v1alpha3
    cluster.x-k8s.io/v1alpha4: v1alpha3
    cluster.x-k8s.io/v1beta1: v1alpha3
    control-plane: sidero-controller-manager
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sidero
    cluster.x-k8s.io/provider: infrastructure-sidero
    cluster.x-k8s.io/v1alpha3: v1alpha3
    cluster.x-k8s.io/v1alpha4: v1alpha3
    cluster.x-k8s.io/v1beta1: v1alpha3
    clusterctl.cluster.x-k8s.io: ""
  name: sidero-siderolink
  namespace: sidero-system
spec:
  ports:
  - port: 51821
    protocol: UDP
    targetPort: siderolink
  selector:
    app: sidero
    cluster.x-k8s.io/provider: sidero
    cluster.x-k8s.io/v1alpha3: v1alpha3
    cluster.x-k8s.io/v1alpha4: v1alpha3
    cluster.x-k8s.io/v1beta1: v1alpha3
    control-plane: sidero-controller-manager
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sidero
    cluster.x-k8s.io/provider: infrastructure-sidero
    cluster.x-k8s.io/v1alpha3: v1alpha3
    cluster.x-k8s.io/v1alpha4: v1alpha3
    cluster.x-k8s.io/v1beta1: v1alpha3
    clusterctl.cluster.x-k8s.io: ""
  name: sidero-tftp
  namespace: sidero-system
spec:
  ports:
  - port: 69
    protocol: UDP
    targetPort: tftp
  selector:
    app: sidero
    cluster.x-k8s.io/provider: sidero
    cluster.x-k8s.io/v1alpha3: v1alpha3
    cluster.x-k8s.io/v1alpha4: v1alpha3
    cluster.x-k8s.io/v1beta1: v1alpha3
    control-plane: sidero-controller-manager
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sidero
    cluster.x-k8s.io/provider: infrastructure-sidero
    cluster.x-k8s.io/v1alpha3: v1alpha3
    cluster.x-k8s.io/v1alpha4: v1alpha3
    cluster.x-k8s.io/v1beta1: v1alpha3
    clusterctl.cluster.x-k8s.io: ""
  name: sidero-webhook-service
  namespace: sidero-system
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    app: sidero
    cluster.x-k8s.io/provider: sidero
    cluster.x-k8s.io/v1alpha3: v1alpha3
    cluster.x-k8s.io/v1alpha4: v1alpha3
    cluster.x-k8s.io/v1beta1: v1alpha3
    control-plane: sidero-controller-manager
